src/objects/Deposition__c.object
<CustomObject>
    <fields>
        <fullName>VIP_Level__c</fullName>
        <label>VIP Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP 1</fullName>
                </value>
                <value>
                    <fullName>VIP 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Job__c</fullName>
        <formula>includes(Deposition_Services__c, &quot;Traditional Video&quot;) ||
includes(Deposition_Services__c, &quot;Advanced Video Services&quot;) ||
includes(Deposition_Services__c, &quot;LegalView (Remote Video)&quot;) ||
includes(Deposition_Services__c, &quot;Synchronized Video&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Video Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_Status__c</fullName>
        <label>Video Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No video</fullName>
                    <default>true</default>
                    <label>No video</label>
                </value>
                <value>
                    <fullName>Not received</fullName>
                </value>
                <value>
                    <fullName>DVD not received</fullName>
                </value>
                <value>
                    <fullName>DVD received</fullName>
                </value>
                <value>
                    <fullName>Video upload needed</fullName>
                </value>
                <value>
                    <fullName>Production complete</fullName>
                </value>
                <value>
                    <fullName>In production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Tech_Instructions__c</fullName>
        <label>Video/Tech Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Videographer_Count__c</fullName>
        <label>Videographer Count</label>
        <summaryFilterItems>
            <field>Attendee__c.Role__c</field>
            <operation>equals</operation>
            <value>Videographer/Technician</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Deposition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Videographer_Email_Address__c</fullName>
        <label>Videographer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vidyo_Room__c</fullName>
        <label>Vidyo Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NextGen</fullName>
                </value>
                <value>
                    <fullName>Caren</fullName>
                </value>
                <value>
                    <fullName>Michele</fullName>
                </value>
                <value>
                    <fullName>Scot</fullName>
                </value>
                <value>
                    <fullName>Scott</fullName>
                </value>
                <value>
                    <fullName>Ken</fullName>
                </value>
                <value>
                    <fullName>Jason</fullName>
                </value>
                <value>
                    <fullName>Brennan</fullName>
                </value>
                <value>
                    <fullName>Jerry</fullName>
                </value>
                <value>
                    <fullName>Jeremy</fullName>
                </value>
                <value>
                    <fullName>Troy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zoom_ID_PIN_Code__c</fullName>
        <formula>CASE( Zoom_ID__c, 
&quot;NextGen Video&quot;, &quot;2154947649&quot;, 
&quot;Everett&quot;, &quot;3129756206&quot;, 
&quot;Jeremy&quot;,&quot;2154947637&quot;, 
&quot;Room 1&quot;, &quot;8352175315&quot;, 
&quot;Room 2&quot;, &quot;8652223641&quot;, 
&quot;Room 3&quot;, &quot;2331467458&quot;, 
&quot;Room 4&quot;, &quot;7484659194&quot;, 
&quot;Room 5&quot;, &quot;6099467743&quot;, 
&quot;Room 6&quot;, &quot;5447004547&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zoom ID PIN Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_ID_URL__c</fullName>
        <formula>IF(ISBLANK(Zoom_ID_PIN_Code__c),&apos;&apos;,&quot;https://lexitas.zoom.us/j/&quot; &amp; Zoom_ID_PIN_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zoom ID URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_ID__c</fullName>
        <label>Zoom ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Room 1</fullName>
                </value>
                <value>
                    <fullName>Room 2</fullName>
                </value>
                <value>
                    <fullName>Room 3</fullName>
                </value>
                <value>
                    <fullName>Room 4</fullName>
                </value>
                <value>
                    <fullName>Room 5</fullName>
                </value>
                <value>
                    <fullName>Room 6</fullName>
                </value>
                <value>
                    <fullName>NextGen Video</fullName>
                </value>
                <value>
                    <fullName>Everett</fullName>
                </value>
                <value>
                    <fullName>Michele</fullName>
                </value>
                <value>
                    <fullName>Jeremy</fullName>
                </value>
                <value>
                    <fullName>No Room Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deposition</label>
    <listViews>
        <fullName>Depo_View</fullName>
        <columns>Case_Name__c</columns>
        <columns>Days_Until_Transcript_Due_Date__c</columns>
        <columns>Deponent_Name__c</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Services__c</columns>
        <columns>Deposition_Status__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Exhibit_Status__c</columns>
        <columns>Insurance_Claim_Info__c</columns>
        <columns>Matter_Number__c</columns>
        <columns>Notes__c</columns>
        <columns>Transcript_Status__c</columns>
        <columns>Turnaround__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date_To_The_Client_Computed__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>notEqual</operation>
            <value>Production Complete,Cancelled,Not A Deposition</value>
        </filters>
        <label>Depo View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Guest_Depositions</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Tool</value>
        </filters>
        <label>Guest Depositions</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Past_Depositions</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Depositions</label>
    </listViews>
    <listViews>
        <fullName>Past_Depositions_All</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Depositions - All</label>
    </listViews>
    <listViews>
        <fullName>Past_Depositions_Allstate</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed,Not A Deposition</value>
        </filters>
        <filters>
            <field>Insurance_Claim_Info__c</field>
            <operation>contains</operation>
            <value>Allstate</value>
        </filters>
        <label>Past Depositions - Allstate</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Past_Depositions_Davies_McFarland</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed,Not A Deposition</value>
        </filters>
        <filters>
            <field>Hiring_Firm__c</field>
            <operation>equals</operation>
            <value>Davies,McFarland and Carroll</value>
        </filters>
        <label>Past Depositions - Davies, McFarland</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Upcoming_Depositions</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed,Not A Deposition</value>
        </filters>
        <label>Upcoming Depositions</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Depositions_Allstate</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed,Not A Deposition</value>
        </filters>
        <filters>
            <field>Insurance_Claim_Info__c</field>
            <operation>contains</operation>
            <value>Allstate</value>
        </filters>
        <label>Upcoming Depositions - Allstate</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Upcoming_Depositions_Davies_McFarland</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed,Not A Deposition</value>
        </filters>
        <filters>
            <field>Hiring_Firm__c</field>
            <operation>equals</operation>
            <value>Davies,McFarland and Carroll</value>
        </filters>
        <label>Upcoming Depositions - Davies, McFarland</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Upcoming_Depositions_Forry_Ullman</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Deposition_Time__c</columns>
        <columns>Hiring_Attorney__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Deposition_Services__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Deposition_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,Confirmed,Not A Deposition</value>
        </filters>
        <filters>
            <field>Hiring_Firm__c</field>
            <operation>equals</operation>
            <value>Forry Ullman</value>
        </filters>
        <label>Upcoming Depositions - Forry Ullman</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{00000}-prelaunch</displayFormat>
        <label>Deposition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depositions</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Block_Blank_Special_Instruction_Text_Box</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Special_Instructions_text__c) &amp;&amp; 
Special_Instructions__c = TRUE</errorConditionFormula>
        <errorDisplayField>Special_Instructions__c</errorDisplayField>
        <errorMessage>Please fill in special instructions below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_QC_Before_Production_Complete</fullName>
        <active>false</active>
        <errorConditionFormula>QC__c  = FALSE  &amp;&amp;   ISPICKVAL(Deposition_Status__c, &quot;Production Complete&quot;)</errorConditionFormula>
        <errorDisplayField>Deposition_Status__c</errorDisplayField>
        <errorMessage>Please QC before marking the job as complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Future_Dates</fullName>
        <active>false</active>
        <description>Make sure that deposition are scheduled with future dates.</description>
        <errorConditionFormula>NULLVALUE(DATEVALUE(CreatedDate),TODAY()) &gt;  Deposition_Date__c</errorConditionFormula>
        <errorMessage>The deposition date is in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hard_Copy_Needed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Hard_Copy__c,&quot;Needed&quot;)
&amp;&amp;
ISPICKVAL(Deposition_Status__c,&quot;Production Complete&quot;)</errorConditionFormula>
        <errorMessage>It appears that one of the attendees needs a hard copy of the transcript. Once that&apos;s complete, please update the &quot;Hard Copy&quot; status to &quot;Complete&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Job_Confirmation_Requires_CR_Confirm</fullName>
        <active>false</active>
        <description>If the job involves a court reporter, they need to confirm before the job is confirmed.</description>
        <errorConditionFormula>INCLUDES(Deposition_Services__c, &quot;Court Reporter&quot;)  &amp;&amp; 
NOT(ISPICKVAL(Confirm_Reporter__c , &quot;Confirmed&quot;)) &amp;&amp;
ISPICKVAL( Deposition_Status__c , &quot;Confirmed&quot;)</errorConditionFormula>
        <errorDisplayField>Confirm_Reporter__c</errorDisplayField>
        <errorMessage>The job cannot be confirmed because the court reporter has not confirmed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Prod_Comp_Until_All_Is_Complete</fullName>
        <active>true</active>
        <description>The Deposition Status to cannot be changed to “Production Complete” if the Transcript, Exhibit or Video Status is “Not Received” or “In Production.”</description>
        <errorConditionFormula>ISPICKVAL(Deposition_Status__c,&quot;Production Complete&quot;) &amp;&amp;
(
ISPICKVAL(Video_Status__c,&quot;In Production&quot;) ||
ISPICKVAL(Video_Status__c,&quot;Not Received&quot;) ||
ISPICKVAL(Exhibit_Status__c,&quot;In Production&quot;) ||
ISPICKVAL(Exhibit_Status__c,&quot;Scanned&quot;) ||
ISPICKVAL(Exhibit_Status__c,&quot;Received&quot;) ||
ISPICKVAL(Exhibit_Status__c,&quot;Not Received&quot;) ||
ISPICKVAL(Transcript_Status__c,&quot;In Production&quot;) ||
ISPICKVAL(Transcript_Status__c,&quot;Not Received&quot;)
) 

&amp;&amp; 
$Profile.Name &lt;&gt; &quot;Public Site Profile&quot;</errorConditionFormula>
        <errorDisplayField>Deposition_Status__c</errorDisplayField>
        <errorMessage>The Deposition Status to cannot be changed to “Production Complete” if the Transcript, Exhibit or Video Status is “Not Received” or “In Production.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Update_With_Deposition_Date</fullName>
        <active>false</active>
        <errorConditionFormula>TODAY() &gt;= ( Deposition_Date__c -2)</errorConditionFormula>
        <errorMessage>It is too close to the deposition to update these details online. Please email &lt;A HREF=&quot;mailto:Primary_Court_Reporting_Firm__r.Scheduling_Email_Address__c&quot;&gt; Primary_Court_Reporting_Firm__r.Scheduling_Email_Address__c&lt;/A&gt;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Updates_on_Cancelled_Depos</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Deposition_Date__c)  &amp;&amp; 
 ISPICKVAL( Deposition_Status__c , &quot;Cancelled&quot;)</errorConditionFormula>
        <errorMessage>Dates cannot be changed on cancelled depositions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VidJob_Confirmation_Requires_Vid_Confirm</fullName>
        <active>false</active>
        <description>If the job involves a videographer, they need to confirm before the job is confirmed.</description>
        <errorConditionFormula>INCLUDES(Deposition_Services__c, &quot;Traditional Video&quot;)  &amp;&amp; 
NOT(ISPICKVAL( Confirm_Video_Tech__c  , &quot;Confirmed&quot;)) &amp;&amp;
ISPICKVAL( Deposition_Status__c , &quot;Confirmed&quot;)</errorConditionFormula>
        <errorDisplayField>Confirm_Video_Tech__c</errorDisplayField>
        <errorMessage>The job cannot be confirmed because the videographer has not confirmed.</errorMessage>
    </validationRules>
</CustomObject>